Update user sign in flow

--- a/elixir/liveview_projects/invoice/lib/invoice/email_template_helpers/email_templates/reset_password_instructions.mjml
+++ b/elixir/liveview_projects/invoice/lib/invoice/email_template_helpers/email_templates/reset_password_instructions.mjml
@@ -39,7 +39,7 @@
           padding-right="25px"
           padding-top="20px"
         >
-          A request to reset your GenInvoice password has been made. If you did
+          A request to reset your Dribbble password has been made. If you did
           not make this request, simply ignore this email. If you did make this
           request, please reset your password:
         </mj-text>
@@ -54,7 +54,7 @@
           color="#ffffff"
           font-family="open Sans Helvetica, Arial, sans-serif"
         >
-          Reset my password
+          Reset password
         </mj-button>
 
         <mj-text
