--- a/elixir/liveview_projects/invoice/lib/invoice_web/components/layouts/app.html.heex
+++ b/elixir/liveview_projects/invoice/lib/invoice_web/components/layouts/app.html.heex
@@ -1,6 +1,6 @@
-<main>
+<main class="h-[100svh]">
   <div>
-    <.flash_group flash={@flash} />
+    <.custom_flash_group flash={@flash} />
     <%= @inner_content %>
   </div>
 </main>
